--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <img class="middle-effect" src="./images/ellipse-3.png" alt="effect in the middle">
 
-    
+
     <!-- navbar -->
     <nav>
         <h2 class="logo-mark">DIGITAL AGENCY</h2>
@@ -50,7 +50,7 @@
     </section>
 
     <section class="info-sec">
-        <img src="./images/branding.png" alt="">
+        <img class="branding-image" src="./images/branding.png" alt="">
 
         <article>
             <h2>Branding & Design system</h2>
