--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
             <li>testimonials</li>
             <li>contact</li>
         </ul>
+
+        <button class="top-menu">
+            <img src="./images/menu.svg" alt="menu icon">
+        </button>
     </nav>
 
     <!-- hero section -->
