Push all changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- navbar -->
     <nav>
-        <h2 class="logo-mark">DIGITAL AGENCY</h2>
+        <p class="logo-mark">DIGITAL AGENCY</p>
 
         <ul>
             <li>home</li>
@@ -59,7 +59,7 @@
         <article>
             <h2>Branding & Design system</h2>
             <p class="sec-text">Commonly used in the graphic, print & publishing industris for previewing visual layout and mockups</p>
-            <img src="./images/arrow-1.svg" alt="">
+            <img class="arrow" src="./images/arrow-1.svg" alt="">
         </article>
     </section>
 
@@ -67,7 +67,7 @@
         <article>
             <h2>Custome & Plugin Development</h2>
             <p class="sec-text">Commonly used in the graphic, print & publishing industris for previewing visual layout and mockups</p>
-            <img src="./images/arrow-1.svg" alt="">
+            <img class="arrow" src="./images/arrow-1.svg" alt="">
         </article>
 
         <img src="./images/plugin.png" alt="">
