contact section corrected

--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@
         <div>
             <h2>Be a part of the next big thing</h2>
             <p>We work with Brans, Startups, to SMEs. Colaborate for more impact and growt</p>
-            <button>CONTACT US</button>
+            
+            <div>
+                <button>CONTACT US</button>
+            </div>
         </div>
     </section>
 
